test/invalid/fc36994_TestOverride/LacksOverrideTest.plume
/**
 * For testing override
 * @author 36994, César Santos
 */
class LacksOverrideTest extends DefinesMethod is
  method test : () -> Boolean is
    true